challenges/13_network-policies/linux-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-demo
  namespace: sebastiankr
spec:
  containers:
    - name: ubuntu
      image: curlimages/curl:latest
      command: ['sleep', 'infinity']
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 100m
          memory: 128Mi
